ToDoItems controller with views

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ToDoListDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "LocalConnection": "Server=DESKTOP-K0HRA77;Database=ToDoListDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "LocalConnection": "Server=DESKTOP-K0HRA77;Database=ToDoListDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "WebContext": "Server=(localdb)\\mssqllocaldb;Database=WebContext-83cde643-1573-403d-be56-11a129c58efa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
